--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,10 +56,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Logout" />
+
+            <Button
+                android:id="@+id/bn_books"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Books" />
         </LinearLayout>
 
 
     </LinearLayout>
+
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/bn_login"
