--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -50,27 +50,31 @@
                         android:layout_weight="3.33"></LinearLayout>
 
                 </LinearLayout>
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:id="@+id/title"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:textColor="#111111"
-                    android:layout_margin="5dp"
-                    android:text="title"/>
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:id="@+id/author"
-                    android:textStyle="italic"
-                    android:textAllCaps="true"
-                    android:textSize="15dp"
-                    android:textColor="#111111"
                     android:layout_margin="5dp"
-                    android:text="by"/>
+                    android:text="title"
+                    android:textAlignment="center"
+                    android:textColor="#111111"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    android:text="by"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="#111111"
+                    android:textSize="15dp"
+                    android:textStyle="italic" />
             </LinearLayout>
 
             <LinearLayout
@@ -92,14 +96,15 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/star"
                         android:layout_gravity="center"/>
+
                     <TextView
+                        android:id="@+id/rate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textColor="#111"
-                        android:id="@+id/rate"
                         android:text="Avg:"
-                        />
+                        android:textAlignment="center"
+                        android:textColor="#111" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -112,14 +117,15 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/pages"
                         android:layout_gravity="center"/>
+
                     <TextView
+                        android:id="@+id/pages"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:textColor="#111"
-                        android:id="@+id/pages"
                         android:text="pages"
-                        />
+                        android:textAlignment="center"
+                        android:textColor="#111" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -132,13 +138,14 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/tag"
                         android:layout_gravity="center"/>
+
                     <TextView
+                        android:id="@+id/tags"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:id="@+id/tags"
-                        android:textColor="#111"
-                        />
+                        android:textAlignment="center"
+                        android:textColor="#111" />
 
                 </LinearLayout>
 
@@ -159,11 +166,17 @@
                     android:textColor="#111"
                     android:text="Description"/>
             </LinearLayout>
+
             <Button
+                android:id="@+id/fav"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FAVORITE"
-                android:id="@+id/fav"></Button>
+                android:layout_gravity="center"
+                android:text="@string/addToFavorites"
+                android:textAllCaps="false"
+                android:textSize="18sp"
+                android:textStyle="bold"></Button>
         </LinearLayout>
 
 
