--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,70 +9,150 @@
     tools:context="com.example.diana.booksrecommender.MainActivity"
     android:weightSum="1">
 
-    <LinearLayout
-        android:id="@+id/prof_section"
-        android:layout_width="match_parent"
-        android:layout_height="265dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_weight="0.26"
-        android:orientation="horizontal"
-        android:weightSum="1">
-
-        <ImageView
-            android:id="@+id/prof_pic"
-            android:layout_width="90dp"
-            android:layout_height="132dp"
-            android:src="@drawable/beforesignin" />
 
         <LinearLayout
-            android:layout_width="175dp"
-            android:layout_height="194dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical">
+            android:id="@+id/prof_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="15dp">
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Name"
-                android:textSize="18dp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/email"
+            <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="Email"
-                android:textSize="12dp"
-                android:textStyle="bold" />
+                android:layout_centerHorizontal="true"
+                android:layout_margin="10dp"
+                android:orientation="horizontal"
+                >
 
-            <Button
-                android:id="@+id/bn_logout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Logout" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.35"
+                    android:orientation="vertical">
 
-            <Button
-                android:id="@+id/bn_books"
+                    <ImageView
+                        android:id="@+id/prof_pic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="100dp"
+                        android:layout_gravity="center"
+                        android:adjustViewBounds="true"
+                        android:background="@android:color/darker_gray"
+                        android:cropToPadding="false"
+                        android:src="@drawable/beforesignin" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.65"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Name"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="Email"
+                        android:textSize="14sp" />
+
+                    <Button
+                        android:id="@+id/bn_logout"
+                        style="@android:style/Widget.Button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:background="@android:color/background_light"
+                        android:fontFamily="sans-serif"
+                        android:text="@string/signout"
+                        android:textAllCaps="false"
+                        android:textSize="12sp"
+                        android:typeface="serif" />
+
+
+
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Books" />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/show"
-                android:text="SHOW"/>
+                android:orientation="horizontal"
+                android:layout_marginTop="100dp">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.33"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/bn_books"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@android:color/holo_green_light"
+                        android:text="@string/search" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.33"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/bn_fav"
+                        style="@android:style/Widget.Button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@color/colorAccent"
+                        android:text="@string/favorites"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/white" />
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.33"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/bn_rec"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@android:color/holo_purple"
+                        android:text="@string/want_more" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
         </LinearLayout>
-
-
-    </LinearLayout>
-
-
     <com.google.android.gms.common.SignInButton
         android:id="@+id/bn_login"
         android:layout_width="193dp"
